--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>ReconFusion</title>
+    <title>3D_Diffusion</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="576">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://reconfusion.github.io/"/>
-    <meta property="og:title" content="ReconFusion: 3D Reconstruction with Diffusion Priors" />
+    <meta property="og:title" content="3D Modeling Enhanced by Diffusion Model" />
     <meta property="og:description" content="3D reconstruction methods such as Neural Radiance Fields (NeRFs) excel at rendering photorealistic novel views of complex scenes. However, recovering a high-quality NeRF typically requires tens to hundreds of input images, resulting in a time-consuming capture process. We present ReconFusion to reconstruct real-world scenes using only a few photos. Our approach leverages a diffusion prior for novel view synthesis, trained on synthetic and multiview datasets, which regularizes a NeRF-based 3D reconstruction pipeline at novel camera poses beyond those captured by the set of input images. Our method synthesizes realistic geometry and texture in underconstrained regions while preserving the appearance of observed regions. We perform an extensive evaluation across various real-world datasets, including forward-facing and 360-degree scenes, demonstrating significant performance improvements over previous few-view NeRF reconstruction approaches."/>
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -73,7 +73,7 @@
 <div class="col-md-3">
     </div>
             <div class="col-md-6 text-center">
-                <ul class="list-inline">
+<!--                 <ul class="list-inline">
                     <li>
                         <a href="https://www.cs.columbia.edu/~rundi/">
                             Rundi Wu
@@ -132,7 +132,7 @@
                         </a><sup>2</sup>*
                     </li>
                     <!-- </br>Google -->
-                </ul>
+                </ul> -->
             </div>
 <div class="col-md-3">
     </div>
