--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <!-- </br>Google -->
                 </ul> -->
             </div>
-<div class="col-md-3">
+<!-- <div class="col-md-3">
     </div>
             <div class="col-md-12 text-center">
                 <sup>1</sup>Columbia University, &nbsp <sup>2</sup>Google Research, &nbsp <sup>3</sup>Google DeepMind
@@ -142,10 +142,10 @@
             </div>
             <div class="col-md-12 text-center">
                 * equal contribution
-            </div> </div>
+            </div> </div> -->
 
 
-        <div class="row text-center">
+<!--         <div class="row text-center">
 					
 			     <span class="link-block">
                 <a href="https://arxiv.org/abs/2312.02981"
@@ -163,7 +163,7 @@
                   <span>Data</span>
                 </a>
               </span>
-			</div>
+			</div> -->
 
 
 
