--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="Neural Radiance Fields (NeRFs) are great at rendering photorealistic views but need many images, making the process slow. We introduce ReconFusion, which reconstructs real-world scenes from just a few photos. Our method uses a diffusion prior trained on synthetic and multiview datasets to regularize NeRF-based 3D reconstruction, even at novel camera angles. This approach ensures realistic geometry and texture in underconstrained areas while maintaining the appearance of observed regions. Extensive evaluations on various real-world datasets, including forward-facing and 360-degree scenes, show that ReconFusion significantly outperforms previous few-view NeRF methods."/>
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content=""3D Modeling Enhanced by Diffusion Model" />
+    <meta name="twitter:title" content="3D Modeling Enhanced by Diffusion Model" />
     <meta name="twitter:description" content="Neural Radiance Fields (NeRFs) can render photorealistic views but require many images, making the process slow. ReconFusion reconstructs scenes with just a few photos using a diffusion prior trained on synthetic and multiview datasets. This regularizes the NeRF-based reconstruction, creating realistic geometry and textures even in underconstrained areas. Extensive evaluations on real-world datasets show significant improvements over previous few-view NeRF methods."/>
     <meta name="twitter:image" content="https://reconfusion.github.io/img/overview_combined.png" />
 
@@ -66,7 +66,8 @@
     <!-- <div class="container" id="main"> -->
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <b>ReconFusion</b>: 3D Reconstruction with Diffusion Priors</br> 
+                <b>3D Modeling Enhanced by Diffusion Model<b>
+<!-- 		    <b>ReconFusion</b>: 3D Reconstruction with Diffusion Prio</br> -->
             </h2>
         </div>
         <div class="row text-center">
@@ -224,7 +225,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
-				  <b> <font color="#118ab2">Recon</font><font color="#ef486e">Fusion</font></b> = <font color="#118ab2">3D Reconstruction</font>  + <font color="#ef486e">Diffusion Prior</font>
+				  <b> <font color="#118ab2">Diffusion</font><font color="#ef486e">Model</font></b> = <font color="#118ab2">3D Reconstruction</font>  + <font color="#ef486e">few views</font>
                 </h3>
                 <image src="img/overview_combined.png" width=90% style="display: block; margin: auto;"></image>
                 <p class="text-justify">
@@ -234,7 +235,7 @@
         </div><br><br>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
-		<h3> ReconFusion enables high-quality 3D reconstruction from few views</h3><br>
+		<h3> High-quality 3D reconstruction from different views</h3><br>
                 <video id="co3d-grid" width="100%" autoplay loop muted controls>
                   <source src="videos/results/co3d_3x5.mp4" type="video/mp4" />
                 </video>
